# mne-hcp

./: .gitignore  .pre-commit-config.yaml  .s3cfg.enc  .travis.yml  Makefile  README.md  README.rst  genindex.html  index.html  pyproject.toml  python_reference.html  search.html  searchindex.js  setup.py  test_requirements.txt  update_doc.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml  unit_tests.yml
_downloads/: make_mne_anatomy.ipynb  make_mne_anatomy.py  make_mne_subjects_dir.ipynb  make_mne_subjects_dir.py  plot_bem.ipynb  plot_bem.py  plot_bem1.ipynb  plot_compute_evoked_inverse_solution.ipynb  plot_compute_forward.ipynb  plot_compute_forward.py  plot_coregistration.ipynb  plot_coregistration.py  plot_decoding_working_memory.ipynb  plot_decoding_working_memory.py  plot_evoked_data.ipynb  plot_evoked_data.py  plot_interpolate_missing_channels.ipynb  plot_reference_correction.ipynb  plot_reference_correction.py  plot_reprocude_erf.ipynb  plot_reprocude_erf.py  plot_reproduce_erf.ipynb  plot_reproduce_erf.py  plot_temporal_searchlight_decoding.ipynb  plot_temporal_searchlight_decoding.py
_sources/: index.txt  python_reference.txt
_sources/auto_examples/: index.txt  make_mne_anatomy.txt  make_mne_subjects_dir.txt  plot_bem.txt  plot_coregistration.txt  plot_decoding_working_memory.txt  plot_evoked_data.txt  plot_interpolate_missing_channels.txt
_sources/auto_tutorials/: index.txt  plot_bem.txt  plot_compute_evoked_inverse_solution.txt  plot_compute_forward.txt  plot_reference_correction.txt  plot_reprocude_erf.txt  plot_reproduce_erf.txt  plot_temporal_searchlight_decoding.txt
auto_examples/: index.html  index.rst  make_mne_anatomy.html  make_mne_subjects_dir.html  plot_bem.html  plot_coregistration.html  plot_decoding_working_memory.html  plot_evoked_data.html  plot_interpolate_missing_channels.html
auto_tutorials/: index.html  index.rst  plot_bem.html  plot_compute_evoked_inverse_solution.html  plot_compute_forward.html  plot_reference_correction.html  plot_reprocude_erf.html  plot_reproduce_erf.html  plot_temporal_searchlight_decoding.html
doc/: Makefile  conf.py  index.rst  python_reference.rst  requirements.txt  sg_execution_times.rst
doc/_templates/: function.rst  layout.html
examples/: README.rst  make_mne_anatomy.py  plot_bem.py  plot_evoked_data.py  plot_interpolate_missing_channels.py
hcp/: __init__.py  _version.py  anatomy.py  conftest.py  io.py  preprocessing.py  viz.py  workflows.py
hcp/io/: __init__.py  file_mapping.py  read.py
hcp/io/file_mapping/: __init__.py  file_mapping.py  s3.py
hcp/io/file_mapping/tests/: test_file_mapping.py
hcp/io/tests/: test_io.py
hcp/tests/: __init__.py  config.py  test_anatomy.py  test_preprocessing.py  test_viz.py
hcp/workflows/: __init__.py  anatomy.py  inverse.py
tools/: get_testing_data.sh
tutorials/: plot_bem.py  plot_compute_evoked_inverse_solution.py  plot_compute_forward.py  plot_compute_resting_inverse_solution.py  plot_reference_correction.py  plot_reprocude_erf.py  plot_reproduce_erf.py  plot_temporal_searchlight_decoding.py
